0.11.0/_sources/reference/dipy.reconst.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`reconst`
==============
.. automodule:: dipy.reconst

.. currentmodule:: dipy.reconst
.. autosummary::

   bench
   test

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.base`
---------------------------
.. automodule:: dipy.reconst.base

.. currentmodule:: dipy.reconst.base
.. autosummary::

   ReconstFit
   ReconstModel

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.benchmarks`
---------------------------------
.. automodule:: dipy.reconst.benchmarks

.. currentmodule:: dipy.reconst.benchmarks
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.benchmarks.bench_bounding_box`
----------------------------------------------------
.. automodule:: dipy.reconst.benchmarks.bench_bounding_box

.. currentmodule:: dipy.reconst.benchmarks.bench_bounding_box
.. autosummary::

   bench_bounding_box
   bounding_box
   measure

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.benchmarks.bench_csd`
-------------------------------------------
.. automodule:: dipy.reconst.benchmarks.bench_csd

.. currentmodule:: dipy.reconst.benchmarks.bench_csd
.. autosummary::

   ConstrainedSphericalDeconvModel
   GradientTable
   bench_csdeconv
   num_grad
   read_stanford_labels

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.benchmarks.bench_peaks`
---------------------------------------------
.. automodule:: dipy.reconst.benchmarks.bench_peaks

.. currentmodule:: dipy.reconst.benchmarks.bench_peaks
.. autosummary::

   bench_local_maxima
   get_sphere
   local_maxima
   measure
   unique_edges

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.benchmarks.bench_squash`
----------------------------------------------
.. automodule:: dipy.reconst.benchmarks.bench_squash

.. currentmodule:: dipy.reconst.benchmarks.bench_squash
.. autosummary::

   bench_quick_squash
   measure
   ndindex
   old_squash
   quick_squash
   reduce

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.benchmarks.bench_vec_val_sum`
---------------------------------------------------
.. automodule:: dipy.reconst.benchmarks.bench_vec_val_sum

.. currentmodule:: dipy.reconst.benchmarks.bench_vec_val_sum
.. autosummary::

   bench_vec_val_vect
   measure
   randn
   vec_val_vect
   with_einsum

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.cache`
----------------------------
.. automodule:: dipy.reconst.cache

.. currentmodule:: dipy.reconst.cache
.. autosummary::

   Cache
   auto_attr

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.cross_validation`
---------------------------------------
.. automodule:: dipy.reconst.cross_validation

.. currentmodule:: dipy.reconst.cross_validation
.. autosummary::

   range
   coeff_of_determination
   kfold_xval

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.csdeconv`
-------------------------------
.. automodule:: dipy.reconst.csdeconv

.. currentmodule:: dipy.reconst.csdeconv
.. autosummary::

   AxSymShResponse
   ConstrainedSDTModel
   ConstrainedSphericalDeconvModel
   SphHarmFit
   SphHarmModel
   TensorModel
   range
   auto_response
   cart2sphere
   csdeconv
   estimate_response
   fa_trace_to_lambdas
   forward_sdeconv_mat
   forward_sdt_deconv_mat
   fractional_anisotropy
   get_sphere
   lazy_index
   lpn
   multi_voxel_fit
   ndindex
   odf_deconv
   odf_sh_to_sharp
   peaks_from_model
   quad
   real_sph_harm
   real_sym_sh_basis
   recursive_response
   response_from_mask
   sh_to_rh
   single_tensor
   sph_harm_ind_list
   vec2vec_rotmat

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.dki`
--------------------------
.. automodule:: dipy.reconst.dki

.. currentmodule:: dipy.reconst.dki
.. autosummary::

   DiffusionKurtosisFit
   DiffusionKurtosisModel
   ReconstModel
   TensorFit
   range
   Wcons
   Wrotate
   Wrotate_element
   apparent_kurtosis_coef
   auto_attr
   axial_diffusivity
   axial_kurtosis
   carlson_rd
   carlson_rf
   decompose_tensor
   design_matrix
   dki_prediction
   from_lower_triangular
   lower_triangular
   mean_diffusivity
   mean_kurtosis
   ndindex
   ols_fit_dki
   radial_diffusivity
   radial_kurtosis
   split_dki_param
   wls_fit_dki

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.dsi`
--------------------------
.. automodule:: dipy.reconst.dsi

.. currentmodule:: dipy.reconst.dsi
.. autosummary::

   Cache
   DiffusionSpectrumDeconvFit
   DiffusionSpectrumDeconvModel
   DiffusionSpectrumFit
   DiffusionSpectrumModel
   OdfFit
   OdfModel
   LR_deconv
   create_qspace
   create_qtable
   fftn
   fftshift
   gen_PSF
   half_to_full_qspace
   hanning_filter
   ifftshift
   map_coordinates
   multi_voxel_fit
   pdf_interp_coords
   pdf_odf
   project_hemisph_bvecs
   threshold_propagator

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.dti`
--------------------------
.. automodule:: dipy.reconst.dti

.. currentmodule:: dipy.reconst.dti
.. autosummary::

   ReconstModel
   Sphere
   TensorFit
   TensorModel
   range
   apparent_diffusion_coef
   auto_attr
   axial_diffusivity
   color_fa
   decompose_tensor
   design_matrix
   determinant
   deviatoric
   eig_from_lo_tri
   eigh
   fractional_anisotropy
   from_lower_triangular
   geodesic_anisotropy
   get_sphere
   gradient_table
   isotropic
   iter_fit_tensor
   linearity
   lower_triangular
   mean_diffusivity
   mode
   nlls_fit_tensor
   norm
   ols_fit_tensor
   pinv
   planarity
   quantize_evecs
   radial_diffusivity
   restore_fit_tensor
   sphericity
   tensor_prediction
   trace
   vec_val_vect
   vector_norm
   wls_fit_tensor

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.gqi`
--------------------------
.. automodule:: dipy.reconst.gqi

.. currentmodule:: dipy.reconst.gqi
.. autosummary::

   Cache
   GeneralizedQSamplingFit
   GeneralizedQSamplingModel
   OdfFit
   OdfModel
   equatorial_maximum
   equatorial_zone_vertices
   gfa
   local_maxima
   multi_voxel_fit
   normalize_qa
   npa
   odf_sum
   patch_maximum
   patch_sum
   patch_vertices
   polar_zone_vertices
   remove_similar_vertices
   squared_radial_component
   triple_odf_maxima
   upper_hemi_map

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.interpolate`
----------------------------------
.. automodule:: dipy.reconst.interpolate

.. currentmodule:: dipy.reconst.interpolate
.. autosummary::

   Interpolator
   NearestNeighborInterpolator
   OutsideImage
   TriLinearInterpolator
   array
   trilinear_interp

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.mapmri`
-----------------------------
.. automodule:: dipy.reconst.mapmri

.. currentmodule:: dipy.reconst.mapmri
.. autosummary::

   MapmriFit
   MapmriModel
   ReconstFit
   ReconstModel
   b_mat
   create_rspace
   factorial
   factorial2
   gradient_table
   hermite
   mapmri_EAP
   mapmri_index_matrix
   mapmri_odf_matrix
   mapmri_phi_1d
   mapmri_phi_3d
   mapmri_phi_matrix
   mapmri_psi_1d
   mapmri_psi_3d
   mapmri_psi_matrix
   multi_voxel_fit
   optional_package
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.multi_voxel`
----------------------------------
.. automodule:: dipy.reconst.multi_voxel

.. currentmodule:: dipy.reconst.multi_voxel
.. autosummary::

   CallableArray
   MultiVoxelFit
   ReconstFit
   as_strided
   multi_voxel_fit
   ndindex

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.odf`
--------------------------
.. automodule:: dipy.reconst.odf

.. currentmodule:: dipy.reconst.odf
.. autosummary::

   OdfFit
   OdfModel
   ReconstFit
   ReconstModel
   gfa
   minmax_normalize

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.peaks`
----------------------------
.. automodule:: dipy.reconst.peaks

.. currentmodule:: dipy.reconst.peaks
.. autosummary::

   HemiSphere
   InTemporaryDirectory
   PeaksAndMetrics
   PeaksAndMetricsDirectionGetter
   Sphere
   repeat
   xrange
   Pool
   cpu_count
   gfa
   local_maxima
   ndindex
   peak_directions
   peak_directions_nl
   peaks_from_model
   remove_similar_vertices
   reshape_peaks_for_visualization
   search_descending
   sh_to_sf_matrix
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.sfm`
--------------------------
.. automodule:: dipy.reconst.sfm

.. currentmodule:: dipy.reconst.sfm
.. autosummary::

   Cache
   ExponentialIsotropicFit
   ExponentialIsotropicModel
   IsotropicFit
   IsotropicModel
   ReconstFit
   ReconstModel
   SparseFascicleFit
   SparseFascicleModel
   auto_attr
   nanmean
   optional_package
   sfm_design_matrix

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.shm`
--------------------------
.. automodule:: dipy.reconst.shm

.. currentmodule:: dipy.reconst.shm
.. autosummary::

   Cache
   CsaOdfModel
   LooseVersion
   OdfFit
   OdfModel
   OpdtModel
   QballBaseModel
   QballModel
   ResidualBootstrapWrapper
   SphHarmFit
   SphHarmModel
   anisotropic_power
   auto_attr
   bootstrap_data_array
   bootstrap_data_voxel
   calculate_max_order
   cart2sphere
   concatenate
   diag
   diff
   dot
   empty
   eye
   forward_sdeconv_mat
   gammaln
   gen_dirac
   hat
   lazy_index
   lcr_matrix
   lpn
   normalize_data
   order_from_ncoef
   pinv
   randint
   real_sph_harm
   real_sym_sh_basis
   real_sym_sh_mrtrix
   sf_to_sh
   sh_to_rh
   sh_to_sf
   sh_to_sf_matrix
   smooth_pinv
   sph_harm_ind_list
   spherical_harmonics
   svd
   unique

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`reconst.shore`
----------------------------
.. automodule:: dipy.reconst.shore

.. currentmodule:: dipy.reconst.shore
.. autosummary::

   Cache
   ShoreFit
   ShoreModel
   cart2sphere
   create_rspace
   factorial
   genlaguerre
   l_shore
   multi_voxel_fit
   n_shore
   optional_package
   real_sph_harm
   shore_indices
   shore_matrix
   shore_matrix_odf
   shore_matrix_pdf
   shore_order
   warn


.. currentmodule:: dipy.reconst

bench
~~~~~

.. autofunction:: bench

test
~~~~

.. autofunction:: test


.. currentmodule:: dipy.reconst.base


:class:`ReconstFit`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: dipy.reconst.benchmarks


.. currentmodule:: dipy.reconst.benchmarks.bench_bounding_box

bench_bounding_box
~~~~~~~~~~~~~~~~~~

.. autofunction:: bench_bounding_box

bounding_box
~~~~~~~~~~~~

.. autofunction:: bounding_box

measure
~~~~~~~

.. autofunction:: measure


.. currentmodule:: dipy.reconst.benchmarks.bench_csd


:class:`ConstrainedSphericalDeconvModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConstrainedSphericalDeconvModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`GradientTable`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: GradientTable
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

bench_csdeconv
~~~~~~~~~~~~~~

.. autofunction:: bench_csdeconv

num_grad
~~~~~~~~

.. autofunction:: num_grad

read_stanford_labels
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: read_stanford_labels


.. currentmodule:: dipy.reconst.benchmarks.bench_peaks

bench_local_maxima
~~~~~~~~~~~~~~~~~~

.. autofunction:: bench_local_maxima

get_sphere
~~~~~~~~~~

.. autofunction:: get_sphere

local_maxima
~~~~~~~~~~~~

.. autofunction:: local_maxima

measure
~~~~~~~

.. autofunction:: measure

unique_edges
~~~~~~~~~~~~

.. autofunction:: unique_edges


.. currentmodule:: dipy.reconst.benchmarks.bench_squash

bench_quick_squash
~~~~~~~~~~~~~~~~~~

.. autofunction:: bench_quick_squash

measure
~~~~~~~

.. autofunction:: measure

ndindex
~~~~~~~

.. autofunction:: ndindex

old_squash
~~~~~~~~~~

.. autofunction:: old_squash

quick_squash
~~~~~~~~~~~~

.. autofunction:: quick_squash

reduce
~~~~~~

.. autofunction:: reduce


.. currentmodule:: dipy.reconst.benchmarks.bench_vec_val_sum

bench_vec_val_vect
~~~~~~~~~~~~~~~~~~

.. autofunction:: bench_vec_val_vect

measure
~~~~~~~

.. autofunction:: measure

randn
~~~~~

.. autofunction:: randn

vec_val_vect
~~~~~~~~~~~~

.. autofunction:: vec_val_vect

with_einsum
~~~~~~~~~~~

.. autofunction:: with_einsum


.. currentmodule:: dipy.reconst.cache


:class:`Cache`
~~~~~~~~~~~~~~


.. autoclass:: Cache
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

auto_attr
~~~~~~~~~

.. autofunction:: auto_attr


.. currentmodule:: dipy.reconst.cross_validation


:class:`range`
~~~~~~~~~~~~~~


.. autoclass:: range
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

coeff_of_determination
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: coeff_of_determination

kfold_xval
~~~~~~~~~~

.. autofunction:: kfold_xval


.. currentmodule:: dipy.reconst.csdeconv


:class:`AxSymShResponse`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: AxSymShResponse
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ConstrainedSDTModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConstrainedSDTModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ConstrainedSphericalDeconvModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConstrainedSphericalDeconvModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SphHarmFit`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: SphHarmFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SphHarmModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SphHarmModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TensorModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`range`
~~~~~~~~~~~~~~


.. autoclass:: range
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

auto_response
~~~~~~~~~~~~~

.. autofunction:: auto_response

cart2sphere
~~~~~~~~~~~

.. autofunction:: cart2sphere

csdeconv
~~~~~~~~

.. autofunction:: csdeconv

estimate_response
~~~~~~~~~~~~~~~~~

.. autofunction:: estimate_response

fa_trace_to_lambdas
~~~~~~~~~~~~~~~~~~~

.. autofunction:: fa_trace_to_lambdas

forward_sdeconv_mat
~~~~~~~~~~~~~~~~~~~

.. autofunction:: forward_sdeconv_mat

forward_sdt_deconv_mat
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: forward_sdt_deconv_mat

fractional_anisotropy
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: fractional_anisotropy

get_sphere
~~~~~~~~~~

.. autofunction:: get_sphere

lazy_index
~~~~~~~~~~

.. autofunction:: lazy_index

lpn
~~~

.. autofunction:: lpn

multi_voxel_fit
~~~~~~~~~~~~~~~

.. autofunction:: multi_voxel_fit

ndindex
~~~~~~~

.. autofunction:: ndindex

odf_deconv
~~~~~~~~~~

.. autofunction:: odf_deconv

odf_sh_to_sharp
~~~~~~~~~~~~~~~

.. autofunction:: odf_sh_to_sharp

peaks_from_model
~~~~~~~~~~~~~~~~

.. autofunction:: peaks_from_model

quad
~~~~

.. autofunction:: quad

real_sph_harm
~~~~~~~~~~~~~

.. autofunction:: real_sph_harm

real_sym_sh_basis
~~~~~~~~~~~~~~~~~

.. autofunction:: real_sym_sh_basis

recursive_response
~~~~~~~~~~~~~~~~~~

.. autofunction:: recursive_response

response_from_mask
~~~~~~~~~~~~~~~~~~

.. autofunction:: response_from_mask

sh_to_rh
~~~~~~~~

.. autofunction:: sh_to_rh

single_tensor
~~~~~~~~~~~~~

.. autofunction:: single_tensor

sph_harm_ind_list
~~~~~~~~~~~~~~~~~

.. autofunction:: sph_harm_ind_list

vec2vec_rotmat
~~~~~~~~~~~~~~

.. autofunction:: vec2vec_rotmat


.. currentmodule:: dipy.reconst.dki


:class:`DiffusionKurtosisFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionKurtosisFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionKurtosisModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionKurtosisModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TensorFit`
~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`range`
~~~~~~~~~~~~~~


.. autoclass:: range
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

Wcons
~~~~~

.. autofunction:: Wcons

Wrotate
~~~~~~~

.. autofunction:: Wrotate

Wrotate_element
~~~~~~~~~~~~~~~

.. autofunction:: Wrotate_element

apparent_kurtosis_coef
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: apparent_kurtosis_coef

auto_attr
~~~~~~~~~

.. autofunction:: auto_attr

axial_diffusivity
~~~~~~~~~~~~~~~~~

.. autofunction:: axial_diffusivity

axial_kurtosis
~~~~~~~~~~~~~~

.. autofunction:: axial_kurtosis

carlson_rd
~~~~~~~~~~

.. autofunction:: carlson_rd

carlson_rf
~~~~~~~~~~

.. autofunction:: carlson_rf

decompose_tensor
~~~~~~~~~~~~~~~~

.. autofunction:: decompose_tensor

design_matrix
~~~~~~~~~~~~~

.. autofunction:: design_matrix

dki_prediction
~~~~~~~~~~~~~~

.. autofunction:: dki_prediction

from_lower_triangular
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: from_lower_triangular

lower_triangular
~~~~~~~~~~~~~~~~

.. autofunction:: lower_triangular

mean_diffusivity
~~~~~~~~~~~~~~~~

.. autofunction:: mean_diffusivity

mean_kurtosis
~~~~~~~~~~~~~

.. autofunction:: mean_kurtosis

ndindex
~~~~~~~

.. autofunction:: ndindex

ols_fit_dki
~~~~~~~~~~~

.. autofunction:: ols_fit_dki

radial_diffusivity
~~~~~~~~~~~~~~~~~~

.. autofunction:: radial_diffusivity

radial_kurtosis
~~~~~~~~~~~~~~~

.. autofunction:: radial_kurtosis

split_dki_param
~~~~~~~~~~~~~~~

.. autofunction:: split_dki_param

wls_fit_dki
~~~~~~~~~~~

.. autofunction:: wls_fit_dki


.. currentmodule:: dipy.reconst.dsi


:class:`Cache`
~~~~~~~~~~~~~~


.. autoclass:: Cache
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionSpectrumDeconvFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionSpectrumDeconvFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionSpectrumDeconvModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionSpectrumDeconvModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionSpectrumFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionSpectrumFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionSpectrumModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionSpectrumModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OdfFit`
~~~~~~~~~~~~~~~


.. autoclass:: OdfFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OdfModel`
~~~~~~~~~~~~~~~~~


.. autoclass:: OdfModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

LR_deconv
~~~~~~~~~

.. autofunction:: LR_deconv

create_qspace
~~~~~~~~~~~~~

.. autofunction:: create_qspace

create_qtable
~~~~~~~~~~~~~

.. autofunction:: create_qtable

fftn
~~~~

.. autofunction:: fftn

fftshift
~~~~~~~~

.. autofunction:: fftshift

gen_PSF
~~~~~~~

.. autofunction:: gen_PSF

half_to_full_qspace
~~~~~~~~~~~~~~~~~~~

.. autofunction:: half_to_full_qspace

hanning_filter
~~~~~~~~~~~~~~

.. autofunction:: hanning_filter

ifftshift
~~~~~~~~~

.. autofunction:: ifftshift

map_coordinates
~~~~~~~~~~~~~~~

.. autofunction:: map_coordinates

multi_voxel_fit
~~~~~~~~~~~~~~~

.. autofunction:: multi_voxel_fit

pdf_interp_coords
~~~~~~~~~~~~~~~~~

.. autofunction:: pdf_interp_coords

pdf_odf
~~~~~~~

.. autofunction:: pdf_odf

project_hemisph_bvecs
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: project_hemisph_bvecs

threshold_propagator
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: threshold_propagator


.. currentmodule:: dipy.reconst.dti


:class:`ReconstModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Sphere`
~~~~~~~~~~~~~~~


.. autoclass:: Sphere
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TensorFit`
~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TensorModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`range`
~~~~~~~~~~~~~~


.. autoclass:: range
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

apparent_diffusion_coef
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: apparent_diffusion_coef

auto_attr
~~~~~~~~~

.. autofunction:: auto_attr

axial_diffusivity
~~~~~~~~~~~~~~~~~

.. autofunction:: axial_diffusivity

color_fa
~~~~~~~~

.. autofunction:: color_fa

decompose_tensor
~~~~~~~~~~~~~~~~

.. autofunction:: decompose_tensor

design_matrix
~~~~~~~~~~~~~

.. autofunction:: design_matrix

determinant
~~~~~~~~~~~

.. autofunction:: determinant

deviatoric
~~~~~~~~~~

.. autofunction:: deviatoric

eig_from_lo_tri
~~~~~~~~~~~~~~~

.. autofunction:: eig_from_lo_tri

eigh
~~~~

.. autofunction:: eigh

fractional_anisotropy
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: fractional_anisotropy

from_lower_triangular
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: from_lower_triangular

geodesic_anisotropy
~~~~~~~~~~~~~~~~~~~

.. autofunction:: geodesic_anisotropy

get_sphere
~~~~~~~~~~

.. autofunction:: get_sphere

gradient_table
~~~~~~~~~~~~~~

.. autofunction:: gradient_table

isotropic
~~~~~~~~~

.. autofunction:: isotropic

iter_fit_tensor
~~~~~~~~~~~~~~~

.. autofunction:: iter_fit_tensor

linearity
~~~~~~~~~

.. autofunction:: linearity

lower_triangular
~~~~~~~~~~~~~~~~

.. autofunction:: lower_triangular

mean_diffusivity
~~~~~~~~~~~~~~~~

.. autofunction:: mean_diffusivity

mode
~~~~

.. autofunction:: mode

nlls_fit_tensor
~~~~~~~~~~~~~~~

.. autofunction:: nlls_fit_tensor

norm
~~~~

.. autofunction:: norm

ols_fit_tensor
~~~~~~~~~~~~~~

.. autofunction:: ols_fit_tensor

pinv
~~~~

.. autofunction:: pinv

planarity
~~~~~~~~~

.. autofunction:: planarity

quantize_evecs
~~~~~~~~~~~~~~

.. autofunction:: quantize_evecs

radial_diffusivity
~~~~~~~~~~~~~~~~~~

.. autofunction:: radial_diffusivity

restore_fit_tensor
~~~~~~~~~~~~~~~~~~

.. autofunction:: restore_fit_tensor

sphericity
~~~~~~~~~~

.. autofunction:: sphericity

tensor_prediction
~~~~~~~~~~~~~~~~~

.. autofunction:: tensor_prediction

trace
~~~~~

.. autofunction:: trace

vec_val_vect
~~~~~~~~~~~~

.. autofunction:: vec_val_vect

vector_norm
~~~~~~~~~~~

.. autofunction:: vector_norm

wls_fit_tensor
~~~~~~~~~~~~~~

.. autofunction:: wls_fit_tensor


.. currentmodule:: dipy.reconst.gqi


:class:`Cache`
~~~~~~~~~~~~~~


.. autoclass:: Cache
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`GeneralizedQSamplingFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: GeneralizedQSamplingFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`GeneralizedQSamplingModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: GeneralizedQSamplingModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OdfFit`
~~~~~~~~~~~~~~~


.. autoclass:: OdfFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OdfModel`
~~~~~~~~~~~~~~~~~


.. autoclass:: OdfModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

equatorial_maximum
~~~~~~~~~~~~~~~~~~

.. autofunction:: equatorial_maximum

equatorial_zone_vertices
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: equatorial_zone_vertices

gfa
~~~

.. autofunction:: gfa

local_maxima
~~~~~~~~~~~~

.. autofunction:: local_maxima

multi_voxel_fit
~~~~~~~~~~~~~~~

.. autofunction:: multi_voxel_fit

normalize_qa
~~~~~~~~~~~~

.. autofunction:: normalize_qa

npa
~~~

.. autofunction:: npa

odf_sum
~~~~~~~

.. autofunction:: odf_sum

patch_maximum
~~~~~~~~~~~~~

.. autofunction:: patch_maximum

patch_sum
~~~~~~~~~

.. autofunction:: patch_sum

patch_vertices
~~~~~~~~~~~~~~

.. autofunction:: patch_vertices

polar_zone_vertices
~~~~~~~~~~~~~~~~~~~

.. autofunction:: polar_zone_vertices

remove_similar_vertices
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: remove_similar_vertices

squared_radial_component
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: squared_radial_component

triple_odf_maxima
~~~~~~~~~~~~~~~~~

.. autofunction:: triple_odf_maxima

upper_hemi_map
~~~~~~~~~~~~~~

.. autofunction:: upper_hemi_map


.. currentmodule:: dipy.reconst.interpolate


:class:`Interpolator`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Interpolator
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`NearestNeighborInterpolator`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NearestNeighborInterpolator
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OutsideImage`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: OutsideImage
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TriLinearInterpolator`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TriLinearInterpolator
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

array
~~~~~

.. autofunction:: array

trilinear_interp
~~~~~~~~~~~~~~~~

.. autofunction:: trilinear_interp


.. currentmodule:: dipy.reconst.mapmri


:class:`MapmriFit`
~~~~~~~~~~~~~~~~~~


.. autoclass:: MapmriFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MapmriModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MapmriModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstFit`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

b_mat
~~~~~

.. autofunction:: b_mat

create_rspace
~~~~~~~~~~~~~

.. autofunction:: create_rspace

factorial
~~~~~~~~~

.. autofunction:: factorial

factorial2
~~~~~~~~~~

.. autofunction:: factorial2

gradient_table
~~~~~~~~~~~~~~

.. autofunction:: gradient_table

hermite
~~~~~~~

.. autofunction:: hermite

mapmri_EAP
~~~~~~~~~~

.. autofunction:: mapmri_EAP

mapmri_index_matrix
~~~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_index_matrix

mapmri_odf_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_odf_matrix

mapmri_phi_1d
~~~~~~~~~~~~~

.. autofunction:: mapmri_phi_1d

mapmri_phi_3d
~~~~~~~~~~~~~

.. autofunction:: mapmri_phi_3d

mapmri_phi_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_phi_matrix

mapmri_psi_1d
~~~~~~~~~~~~~

.. autofunction:: mapmri_psi_1d

mapmri_psi_3d
~~~~~~~~~~~~~

.. autofunction:: mapmri_psi_3d

mapmri_psi_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: mapmri_psi_matrix

multi_voxel_fit
~~~~~~~~~~~~~~~

.. autofunction:: multi_voxel_fit

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.reconst.multi_voxel


:class:`CallableArray`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CallableArray
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MultiVoxelFit`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MultiVoxelFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstFit`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

as_strided
~~~~~~~~~~

.. autofunction:: as_strided

multi_voxel_fit
~~~~~~~~~~~~~~~

.. autofunction:: multi_voxel_fit

ndindex
~~~~~~~

.. autofunction:: ndindex


.. currentmodule:: dipy.reconst.odf


:class:`OdfFit`
~~~~~~~~~~~~~~~


.. autoclass:: OdfFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OdfModel`
~~~~~~~~~~~~~~~~~


.. autoclass:: OdfModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstFit`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

gfa
~~~

.. autofunction:: gfa

minmax_normalize
~~~~~~~~~~~~~~~~

.. autofunction:: minmax_normalize


.. currentmodule:: dipy.reconst.peaks


:class:`HemiSphere`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: HemiSphere
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`InTemporaryDirectory`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: InTemporaryDirectory
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PeaksAndMetrics`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PeaksAndMetrics
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PeaksAndMetricsDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PeaksAndMetricsDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Sphere`
~~~~~~~~~~~~~~~


.. autoclass:: Sphere
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`repeat`
~~~~~~~~~~~~~~~


.. autoclass:: repeat
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`xrange`
~~~~~~~~~~~~~~~


.. autoclass:: xrange
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

Pool
~~~~

.. autofunction:: Pool

cpu_count
~~~~~~~~~

.. autofunction:: cpu_count

gfa
~~~

.. autofunction:: gfa

local_maxima
~~~~~~~~~~~~

.. autofunction:: local_maxima

ndindex
~~~~~~~

.. autofunction:: ndindex

peak_directions
~~~~~~~~~~~~~~~

.. autofunction:: peak_directions

peak_directions_nl
~~~~~~~~~~~~~~~~~~

.. autofunction:: peak_directions_nl

peaks_from_model
~~~~~~~~~~~~~~~~

.. autofunction:: peaks_from_model

remove_similar_vertices
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: remove_similar_vertices

reshape_peaks_for_visualization
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: reshape_peaks_for_visualization

search_descending
~~~~~~~~~~~~~~~~~

.. autofunction:: search_descending

sh_to_sf_matrix
~~~~~~~~~~~~~~~

.. autofunction:: sh_to_sf_matrix

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.reconst.sfm


:class:`Cache`
~~~~~~~~~~~~~~


.. autoclass:: Cache
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ExponentialIsotropicFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ExponentialIsotropicFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ExponentialIsotropicModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ExponentialIsotropicModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IsotropicFit`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IsotropicFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IsotropicModel`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IsotropicModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstFit`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SparseFascicleFit`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SparseFascicleFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SparseFascicleModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SparseFascicleModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

auto_attr
~~~~~~~~~

.. autofunction:: auto_attr

nanmean
~~~~~~~

.. autofunction:: nanmean

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

sfm_design_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: sfm_design_matrix


.. currentmodule:: dipy.reconst.shm


:class:`Cache`
~~~~~~~~~~~~~~


.. autoclass:: Cache
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CsaOdfModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CsaOdfModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LooseVersion`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LooseVersion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OdfFit`
~~~~~~~~~~~~~~~


.. autoclass:: OdfFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OdfModel`
~~~~~~~~~~~~~~~~~


.. autoclass:: OdfModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`OpdtModel`
~~~~~~~~~~~~~~~~~~


.. autoclass:: OpdtModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QballBaseModel`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: QballBaseModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QballModel`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: QballModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ResidualBootstrapWrapper`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ResidualBootstrapWrapper
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SphHarmFit`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: SphHarmFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SphHarmModel`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SphHarmModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

anisotropic_power
~~~~~~~~~~~~~~~~~

.. autofunction:: anisotropic_power

auto_attr
~~~~~~~~~

.. autofunction:: auto_attr

bootstrap_data_array
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bootstrap_data_array

bootstrap_data_voxel
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bootstrap_data_voxel

calculate_max_order
~~~~~~~~~~~~~~~~~~~

.. autofunction:: calculate_max_order

cart2sphere
~~~~~~~~~~~

.. autofunction:: cart2sphere

concatenate
~~~~~~~~~~~

.. autofunction:: concatenate

diag
~~~~

.. autofunction:: diag

diff
~~~~

.. autofunction:: diff

dot
~~~

.. autofunction:: dot

empty
~~~~~

.. autofunction:: empty

eye
~~~

.. autofunction:: eye

forward_sdeconv_mat
~~~~~~~~~~~~~~~~~~~

.. autofunction:: forward_sdeconv_mat

gammaln
~~~~~~~

.. autofunction:: gammaln

gen_dirac
~~~~~~~~~

.. autofunction:: gen_dirac

hat
~~~

.. autofunction:: hat

lazy_index
~~~~~~~~~~

.. autofunction:: lazy_index

lcr_matrix
~~~~~~~~~~

.. autofunction:: lcr_matrix

lpn
~~~

.. autofunction:: lpn

normalize_data
~~~~~~~~~~~~~~

.. autofunction:: normalize_data

order_from_ncoef
~~~~~~~~~~~~~~~~

.. autofunction:: order_from_ncoef

pinv
~~~~

.. autofunction:: pinv

randint
~~~~~~~

.. autofunction:: randint

real_sph_harm
~~~~~~~~~~~~~

.. autofunction:: real_sph_harm

real_sym_sh_basis
~~~~~~~~~~~~~~~~~

.. autofunction:: real_sym_sh_basis

real_sym_sh_mrtrix
~~~~~~~~~~~~~~~~~~

.. autofunction:: real_sym_sh_mrtrix

sf_to_sh
~~~~~~~~

.. autofunction:: sf_to_sh

sh_to_rh
~~~~~~~~

.. autofunction:: sh_to_rh

sh_to_sf
~~~~~~~~

.. autofunction:: sh_to_sf

sh_to_sf_matrix
~~~~~~~~~~~~~~~

.. autofunction:: sh_to_sf_matrix

smooth_pinv
~~~~~~~~~~~

.. autofunction:: smooth_pinv

sph_harm_ind_list
~~~~~~~~~~~~~~~~~

.. autofunction:: sph_harm_ind_list

spherical_harmonics
~~~~~~~~~~~~~~~~~~~

.. autofunction:: spherical_harmonics

svd
~~~

.. autofunction:: svd

unique
~~~~~~

.. autofunction:: unique


.. currentmodule:: dipy.reconst.shore


:class:`Cache`
~~~~~~~~~~~~~~


.. autoclass:: Cache
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ShoreFit`
~~~~~~~~~~~~~~~~~


.. autoclass:: ShoreFit
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ShoreModel`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ShoreModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

cart2sphere
~~~~~~~~~~~

.. autofunction:: cart2sphere

create_rspace
~~~~~~~~~~~~~

.. autofunction:: create_rspace

factorial
~~~~~~~~~

.. autofunction:: factorial

genlaguerre
~~~~~~~~~~~

.. autofunction:: genlaguerre

l_shore
~~~~~~~

.. autofunction:: l_shore

multi_voxel_fit
~~~~~~~~~~~~~~~

.. autofunction:: multi_voxel_fit

n_shore
~~~~~~~

.. autofunction:: n_shore

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

real_sph_harm
~~~~~~~~~~~~~

.. autofunction:: real_sph_harm

shore_indices
~~~~~~~~~~~~~

.. autofunction:: shore_indices

shore_matrix
~~~~~~~~~~~~

.. autofunction:: shore_matrix

shore_matrix_odf
~~~~~~~~~~~~~~~~

.. autofunction:: shore_matrix_odf

shore_matrix_pdf
~~~~~~~~~~~~~~~~

.. autofunction:: shore_matrix_pdf

shore_order
~~~~~~~~~~~

.. autofunction:: shore_order

warn
~~~~

.. autofunction:: warn

